sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not enough arguments for method plusPetitQue: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameter x$2.
		if ( plusPetitQue(i+1) == false ){
                                 ^